--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
     <i onclick="on()" class="fas fa-bars"></i>
   </span>
   <!--  -->
-  <h1 class="main-title" style=" font-family: 'Courgette', cursive;;">Muhammad Imran <br> 
+  <h1 class="main-title" style=" font-family: 'Courgette', cursive;">Muhammad Imran <br> 
     <br>
-    <span class="thin" style="font-family: arial; "  > //Tech Enthusiast</span> </h1>
+    <span class="thin" style="font-family: arial;" > //Tech Enthusiast</span> </h1>
     </div>
 </header>
 <div class="about" id="about">
@@ -94,7 +94,7 @@
     <h1 class="aboutpara" id="touch">Get in touch</h1>
     <img src="contacts.svg" alt="" class="myimg" id="contactimg">
     <p class="aboutpara" id="lpara">If you want to contact me, don't hesitate to. I love to work with you!</p>
-  <div class="pics">
+    <div class="pics">
     <span style="font-size: 3em; color:#66fcf1;">
       <a href="https://twitter.com/i_m_imraan?s=09">  <i  class="fab fa-twitter"></i></a>
     <a  href="https://www.instagram.com/i.m.imraaan"> <i class="fab fa-instagram"></i></a>
@@ -103,7 +103,7 @@
     
     </span>
     <br>
-    <h5 id="gmail">Mail me: <span class="mail"> mijanjua1212@gmail.com</span> </h5><br>
+    <h5 id="gmail">Mail me:<span class="mail"> mijanjua1212@gmail.com</span> </h5><br>
     <br>
     <br>
   </div>  
@@ -120,26 +120,6 @@
     <br>
   </footer>
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
